modified the project facet's configuration, add "proto fixed dir" config; modified the generating logic, use proto fixed dir instead of proto's parent dir;